# Tricubic-Analysis

./: .gitignore  CMakeLists.txt  README.md
docs/: check_8cpp.html  check_8cpp.js  check_8cpp__incl.dot  check_8cpp_a0253f7ad7152e0fc3ef1e329205b2803_icgraph.dot  check_8cpp_a15ae095adec08b08b0b78d509f4e457c_cgraph.dot  check_8cpp_a1f6d0e058f0eeb1bf8ea5f723307bc35_cgraph.dot  check_8cpp_a1f6d0e058f0eeb1bf8ea5f723307bc35_icgraph.dot  check_8cpp_a2d29d4c2ed1d7e0293a947c714a87051_icgraph.dot  check_8cpp_a690936755ccb680c3abbdad01606f529_cgraph.dot  check_8cpp_a690936755ccb680c3abbdad01606f529_icgraph.dot  check_8cpp_a9fa4213fe9b28a20cbfa207ab6d81ff0_cgraph.dot  check_8cpp_a9fa4213fe9b28a20cbfa207ab6d81ff0_icgraph.dot  check_8cpp_aaff210d4da941b96f4f2980c49f64b5e_icgraph.dot  check_8cpp_adbd00633d8fcd31571bf45848faab7d1_icgraph.dot  check_8cpp_aedb38fc897e47427c359655dc40c5796_cgraph.dot  check_8cpp_source.html  check_8h.html  check_8h.js  check_8h__dep__incl.dot  check_8h__incl.dot  check_8h_source.html  corners_8h.html  corners_8h.js  corners_8h__dep__incl.dot  corners_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.dot  main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.dot  main_8cpp_a99e464ee525c8272bc341b47d8485d25_icgraph.dot  (+66 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: check.cpp  check.h  corners.h  main.cpp  p.h  test_functions.cpp  test_functions.h  util.cpp  util.h
src/test_functions/: test_1.cpp  test_1.h  test_2.cpp  (+11 more)
tricubic/: coeff.h  libtricubic.cpp  tricubic_utils.cpp
(+6 files in other folders)
